--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@pqina/flip": "^1.7.7",
+    "@react-google-maps/api": "^2.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "bootswatch": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.0",
     "react-request-fullscreen": "^1.1.2",
     "react-router-dom": "^6.3.0",
-    "react-screen-orientation": "^0.0.4",
     "react-scripts": "5.0.1",
+    "react-use-cookies": "^1.0.0",
     "reactstrap": "^9.1.3",
     "serve": "^14.0.1",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
