--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-use-cookies": "^1.0.0",
     "reactstrap": "^9.1.3",
     "serve": "^14.0.1",
+    "use-local-storage-state": "^18.1.1",
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
