--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
+    "react-icons": "^5.2.1",
     "react-request-fullscreen": "^1.1.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "react-use-cookies": "^1.0.0",
     "reactstrap": "^9.1.3",
     "serve": "^14.0.1",
@@ -30,16 +30,9 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "browserslist": {
     "production": [
@@ -52,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@nabla/vite-plugin-eslint": "^2.0.4",
+    "@vitejs/plugin-react": "^4.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "vite": "^5.2.12",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
