--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "react-weather",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@pqina/flip": "^1.7.7",
+    "@mantine/core": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@pqina/flip": "^1.8.3",
     "@react-google-maps/api": "^2.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "bootswatch": "^5.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-dom": "^18.2.0",
@@ -23,10 +23,9 @@
     "react-router-dom": "^6.3.0",
     "react-use-cookies": "^1.0.0",
     "reactstrap": "^9.1.3",
-    "serve": "^14.0.1",
     "use-local-storage-state": "^18.1.1",
     "use-places-autocomplete": "^4.0.0",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^4.1.0",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
@@ -48,10 +47,12 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
-    "vite": "^5.2.12",
-    "vite-plugin-eslint": "^1.8.1"
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
+    "vite": "^5.2.13"
   }
 }
