--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
     "react-icons": "^5.2.1",
+    "react-image-size": "^2.3.2",
     "react-request-fullscreen": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-use-cookies": "^1.0.0",
