--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ios >= 12"
     ],
     "development": [
       "last 1 chrome version",
@@ -48,10 +49,15 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
+    "@types/react": "^18.3.3",
+    "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "vite": "^5.2.12",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-legacy-swc": "^1.2.0"
   }
 }
