--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "terser": "^5.31.1",
-    "vite": "^5.2.13"
+    "vite": "^5.2.13",
+    "vite-plugin-simple-vconsole": "^0.1.13"
   }
 }
