--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@mantine/notifications": "^7.10.1",
     "@pqina/flip": "^1.8.3",
     "@react-google-maps/api": "^2.12.1",
+    "@tanstack/query-persist-client-core": "^5.29.0",
+    "@tanstack/react-query": "^5.29.2",
+    "axios": "^1.6.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -52,9 +55,10 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
+    "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@tanstack/react-query-devtools": "^5.29.2",
     "@types/react": "^18.3.3",
     "@vitejs/plugin-legacy": "^5.4.1",
-    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
