--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@react-google-maps/api": "^2.12.1",
     "@tanstack/query-persist-client-core": "^5.29.0",
     "@tanstack/react-query": "^5.29.2",
-    "axios": "^1.6.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.2.0",
     "bootswatch": "^5.2.0",
     "core-js": "^3.37.1",
+    "dayjs": "^1.11.11",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap-typeahead": "^6.0.0-rc.3",
