--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
+    "cardinal-direction": "^1.1.1",
     "core-js": "^3.37.1",
     "dayjs": "^1.11.11",
     "prop-types": "^15.8.1",
