--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.37.1",
     "dayjs": "^1.11.11",
     "prop-types": "^15.8.1",
+    "radash": "^12.1.0",
     "react": "^18.3.1",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.3.1",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.24.0",
     "react-use-cookies": "^1.0.0",
     "reactstrap": "^9.2.2",
+    "suncalc": "^1.9.0",
     "use-local-storage-state": "^18.3.3",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^4.2.1",
