--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tanstack/eslint-plugin-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.1",
     "@types/react": "^18.3.3",
+    "@types/suncalc": "^1.9.2",
     "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.57.0",
