--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "react": "^18.3.1",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-google-autocomplete": "^2.7.3",
     "react-icons": "^5.2.1",
     "react-image-size": "^2.4.0",
-    "react-marquee-text": "^1.0.4",
     "react-request-fullscreen": "^1.1.2",
     "react-router-dom": "^6.24.1",
     "react-use-cookies": "^1.0.0",
