--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cardinal-direction": "^1.1.1",
     "core-js": "^3.37.1",
     "dayjs": "^1.11.11",
+    "jotai": "^2.9.3",
     "prop-types": "^15.8.1",
     "radash": "^12.1.0",
     "react": "^18.3.1",
