--- a/package.json
+++ b/package.json
@@ -4,40 +4,30 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
-    "@mantine/notifications": "^7.11.2",
+    "@mantine/core": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
+    "@mantine/notifications": "^7.12.1",
     "@pqina/flip": "^1.8.3",
     "@react-google-maps/api": "^2.19.3",
-    "@tanstack/query-persist-client-core": "^5.51.1",
-    "@tanstack/react-query": "^5.51.1",
+    "@tanstack/query-persist-client-core": "^5.52.2",
+    "@tanstack/react-query": "^5.52.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
-    "bootswatch": "^5.3.3",
+    "axios": "^1.7.5",
     "cardinal-direction": "^1.1.1",
-    "core-js": "^3.37.1",
-    "dayjs": "^1.11.11",
+    "dayjs": "^1.11.13",
     "jotai": "^2.9.3",
+    "nanoid": "^5.0.7",
     "prop-types": "^15.8.1",
     "radash": "^12.1.0",
     "react": "^18.3.1",
-    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-google-autocomplete": "^2.7.3",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-image-size": "^2.4.0",
-    "react-request-fullscreen": "^1.1.2",
-    "react-router-dom": "^6.24.1",
-    "react-use-cookies": "^1.0.0",
     "suncalc": "^1.9.0",
-    "use-local-storage-state": "^18.3.3",
     "use-places-autocomplete": "^4.0.1",
-    "web-vitals": "^4.2.1",
-    "webfontloader": "^1.6.28"
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
     "start": "vite",
@@ -60,20 +50,20 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
-    "@tanstack/eslint-plugin-query": "^5.51.1",
-    "@tanstack/react-query-devtools": "^5.51.1",
-    "@types/react": "^18.3.3",
+    "@tanstack/eslint-plugin-query": "^5.52.0",
+    "@tanstack/react-query-devtools": "^5.52.2",
+    "@types/react": "^18.3.4",
     "@types/suncalc": "^1.9.2",
-    "@vitejs/plugin-legacy": "^5.4.1",
+    "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "postcss": "^8.4.39",
-    "postcss-preset-mantine": "^1.15.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "postcss": "^8.4.41",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "terser": "^5.31.2",
-    "vite": "^5.3.3",
+    "terser": "^5.31.6",
+    "vite": "^5.4.2",
     "vite-plugin-simple-vconsole": "^0.1.13"
   }
 }
