--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest",
+    "testui": "vitest --ui"
   },
   "browserslist": {
     "production": [
@@ -56,6 +58,7 @@
     "@types/suncalc": "^1.9.2",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "@vitest/ui": "^2.0.5",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -64,6 +67,7 @@
     "postcss-simple-vars": "^7.0.1",
     "terser": "^5.31.6",
     "vite": "^5.4.2",
-    "vite-plugin-simple-vconsole": "^0.1.13"
+    "vite-plugin-simple-vconsole": "^0.1.13",
+    "vitest": "^2.0.5"
   }
 }
