--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/query-persist-client-core": "^5.52.2",
     "@tanstack/react-query": "^5.52.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "axios": "^1.7.5",
     "cardinal-direction": "^1.1.1",
     "dayjs": "^1.11.13",
@@ -54,6 +52,9 @@
     "@nabla/vite-plugin-eslint": "^2.0.4",
     "@tanstack/eslint-plugin-query": "^5.52.0",
     "@tanstack/react-query-devtools": "^5.52.2",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.4",
     "@types/suncalc": "^1.9.2",
     "@vitejs/plugin-legacy": "^5.4.2",
@@ -62,6 +63,7 @@
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "jsdom": "^25.0.0",
     "postcss": "^8.4.41",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
