--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "@nabla/vite-plugin-eslint": "^2.0.4",
     "@tanstack/eslint-plugin-query": "^5.59.1",
     "@tanstack/react-query-devtools": "^5.59.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.11",
     "@types/suncalc": "^1.9.2",
     "@vitejs/plugin-legacy": "^5.4.2",
@@ -62,7 +64,9 @@
     "@vitest/ui": "^2.1.2",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-testing-library": "^6.3.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
