--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
+    "@tsconfig/vite-react": "^3.0.2",
     "@types/react": "^18.3.11",
     "@types/suncalc": "^1.9.2",
     "@vitejs/plugin-legacy": "^5.4.2",
