--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ES6",
     "allowJs": true,
-    "jsx": "preserve",
     "outDir": "dist"
-  }
+  },
+  "extends": "@tsconfig/vite-react/tsconfig.json"
 }
