--- a/package.json
+++ b/package.json
@@ -56,12 +56,13 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.13",
     "@tsconfig/vite-react": "^3.0.2",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.11",
     "@types/suncalc": "^1.9.2",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-react-swc": "^3.7.1",
+    "@vitest/coverage-v8": "^2.1.2",
     "@vitest/ui": "^2.1.2",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
