--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": "react-app",
-  "plugins": ["react-refresh"],
+  "plugins": ["react-refresh", "eslint-plugin-react-compiler"],
   "rules": {
-    "react-refresh/only-export-components": "warn"
+    "react-refresh/only-export-components": "warn",
+    "react-compiler/react-compiler": "error"
   }
 }
