--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "scripts": {
     "start": "vite",
+    "dev-msw": "set VITE_ENABLE_MSW=true && vite",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest",
@@ -71,6 +72,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "eslint-plugin-testing-library": "^6.3.0",
     "jsdom": "^25.0.1",
+    "msw": "^2.4.9",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
@@ -78,5 +80,11 @@
     "vite": "^5.4.8",
     "vite-plugin-simple-vconsole": "^0.1.13",
     "vitest": "^2.1.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public",
+      "dist"
+    ]
   }
 }
