--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "terser": "^5.34.1",
     "vite": "^5.4.8",
     "vite-plugin-simple-vconsole": "^0.1.13",
+    "vite-plugin-top-level-await": "^1.4.4",
     "vitest": "^2.1.2"
   },
   "msw": {
