--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "extends": "react-app",
-  "plugins": ["react-refresh", "eslint-plugin-react-compiler"],
+  "plugins": ["react-refresh"],
   "rules": {
-    "react-refresh/only-export-components": "warn",
-    "react-compiler/react-compiler": "error"
+    "react-refresh/only-export-components": "warn"
   }
 }
