--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^7.13.2",
-    "@mantine/hooks": "^7.13.2",
-    "@mantine/notifications": "^7.13.2",
+    "@mantine/core": "^7.14.1",
+    "@mantine/hooks": "^7.14.1",
+    "@mantine/notifications": "^7.14.1",
+    "@million/lint": "^1.0.12",
     "@pqina/flip": "^1.8.3",
-    "@react-google-maps/api": "^2.19.3",
-    "@tanstack/query-persist-client-core": "^5.59.0",
-    "@tanstack/react-query": "^5.59.0",
+    "@react-google-maps/api": "^2.20.3",
+    "@tanstack/query-persist-client-core": "^5.60.6",
+    "@tanstack/react-query": "^5.61.0",
     "axios": "^1.7.7",
     "cardinal-direction": "^1.1.1",
     "dayjs": "^1.11.13",
-    "jotai": "^2.10.0",
-    "nanoid": "^5.0.7",
+    "jotai": "^2.10.3",
+    "nanoid": "^5.0.8",
     "prop-types": "^15.8.1",
     "radash": "^12.1.0",
     "react": "^18.3.1",
@@ -25,7 +26,7 @@
     "react-image-size": "^2.4.0",
     "suncalc": "^1.9.0",
     "use-places-autocomplete": "^4.0.1",
-    "web-vitals": "^4.2.3"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "vite",
@@ -51,36 +52,35 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
-    "@tanstack/eslint-plugin-query": "^5.59.1",
-    "@tanstack/react-query-devtools": "^5.59.0",
+    "@tanstack/eslint-plugin-query": "^5.60.1",
+    "@tanstack/react-query-devtools": "^5.61.0",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@tsconfig/vite-react": "^3.0.2",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^18.3.11",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.12",
     "@types/suncalc": "^1.9.2",
-    "@vitejs/plugin-legacy": "^5.4.2",
+    "@vitejs/plugin-legacy": "^5.4.3",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "@vitest/coverage-v8": "^2.1.2",
-    "@vitest/ui": "^2.1.2",
+    "@vitest/coverage-v8": "^2.1.5",
+    "@vitest/ui": "^2.1.5",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-react-compiler": "0.0.0-experimental-7c1344f-20241009",
-    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-jest-dom": "^5.5.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-testing-library": "^6.3.0",
     "jsdom": "^25.0.1",
-    "msw": "^2.4.9",
-    "postcss": "^8.4.47",
+    "msw": "^2.6.6",
+    "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "terser": "^5.34.1",
-    "vite": "^5.4.8",
+    "terser": "^5.36.0",
+    "vite": "^5.4.11",
     "vite-plugin-simple-vconsole": "^0.1.13",
     "vite-plugin-top-level-await": "^1.4.4",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.5"
   },
   "msw": {
     "workerDirectory": [
